kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cherrypick
  namespace: cherrypick
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: cherrypick
  template:
    metadata:
      labels:
        name: cherrypick
    spec:
      containers:
      - name: cherrypick
        image: juunini/cherrypick:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "2"
        volumeMounts:
        - name: config
          mountPath: /cherrypick/.config
          readOnly: true
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        livenessProbe:
          exec:
            command:
            - "/bin/bash"
            - "/cherrypick/healthcheck.sh"
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - /cherrypick/healthcheck.sh
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        startupProbe:
          exec:
            command:
            - /bin/bash
            - /cherrypick/healthcheck.sh
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
      restartPolicy: Always
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/location
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            name: cherrypick
      volumes:
        - name: config
          secret:
            secretName: cherrypick
            items:
            - key: config
              path: default.yml
