kustomize/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cherrypick
spec:
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16.3-alpine
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"
        ports:
          - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: postgres
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: dshm
        emptyDir:
          medium: Memory

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cherrypick
  labels:
    name: postgres
spec:
  selector:
    name: postgres
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
