kustomize/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: cherrypick
spec:
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
      - name: redis
        image: redis:7.4.1-alpine3.20
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1"
        ports:
          - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: creds
        secret:
          secretName: gcloud
      - name: data
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: cherrypick
  labels:
    name: redis
spec:
  selector:
    name: redis
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
