kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cherrypick
  namespace: cherrypick
spec:
  selector:
    name: cherrypick
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
