kustomize/argocd-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-routetcp
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`yodangang.argocd.com`)
    services:
    - name: argocd-server
      port: 443
  tls:
    passthrough: true
