kustomize/minio-ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirectscheme
  namespace: minio
spec:
  redirectScheme:
    permanent: true
    scheme: https

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`static.yodangang.express`)
      kind: Rule
      services:
        - name: minio
          port: 80
  tls:
    secretName: minio-cert-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-redirect
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`static.yodangang.express`)
      kind: Rule
      services:
        - name: minio
          port: 80
      middlewares:
        - name: https-redirectscheme
